Add tasks from lessons 3 & 4

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 
 <body>
-  <script src="js/Lesson1_Task_1.js"></script>
-  <script src="js/Lesson1_Task_2.js"></script>
-  <script src="js/Lesson1_Task_3.js"></script>
+  <script src="js/Lesson2_Task_A.js"></script>
+  <script src="js/Lesson2_Task_B.js"></script>
+  <script src="js/Lesson2_Task_C.js"></script>
+  <script src="js/Lesson3_Task_FamilyBudget.js"></script>
+  <script src="js/Lesson3_Task_FindDataArr.js"></script>
+  <script src="js/Lesson3_Task_NonRegSearch.js"></script>
+  <script src="js/Lesson4_Task_Polyndrom.js"></script>
+  <script src="js/Lesson4_Task_RndNmb.js"></script>
 </body>
 
 </html>
