--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
-  <script src="js/Lesson2_Task_A.js"></script>
-  <script src="js/Lesson2_Task_B.js"></script>
-  <script src="js/Lesson2_Task_C.js"></script>
-  <script src="js/Lesson3_Task_FamilyBudget.js"></script>
-  <script src="js/Lesson3_Task_FindDataArr.js"></script>
-  <script src="js/Lesson3_Task_NonRegSearch.js"></script>
-  <script src="js/Lesson4_Task_Polyndrom.js"></script>
-  <script src="js/Lesson4_Task_RndNmb.js"></script>
+  <script src="js/Lesson2_Homework_A.js"></script>
+  <script src="js/Lesson2_Homework_B.js"></script>
+  <script src="js/Lesson2_Homework_C.js"></script>
+  <script src="js/Lesson3_Homework_ CaseInsensitiveSearch.js"></script>
+  <script src="js/Lesson3_Homework_FamilyBudget.js"></script>
+  <script src="js/Lesson3_Homework_FindingDataArr.js"></script>
+  <script src="js/Lesson4_Homework_Polyndrom.js"></script>
+  <script src="js/Lesson4_Homework_RandomNumbers.js"></script>
+  <script src="js/Lesson5_Homework_FunctionCalc.js"></script>
+  <script src="js/Lesson5_Homework_FunctionConstructor.js"></script>
+  <script src="js/Lesson5_Homework_Timer.js"></script>
+  <script src="js/Lesson7_Homework_ModalWindowIsClosed.js"></script>
+  <script src="js/Lesson7_Homework_ModalWindowIsOpen.js"></script>
+  <script src="js/Lesson8_Homework_AddUserInfoInTable.js"></script>
+  <script src="js/Lesson8_Homework_Extended.js"></script>
+  <script src="js/"></script>
+
 </body>
 
 </html>
