--- a/index.html
+++ b/index.html
@@ -9,22 +9,65 @@
 </head>
 
 <body>
-  <script src="js/Lesson2_Homework_A.js"></script>
+
+  <!-- Lesson 7 and 8 -->
+  <table class="table">
+    <thead>
+      <tr>
+        <th>firstName</th>
+        <th>lastName</th>
+        <th>age</th>
+      </tr>
+    </thead>
+  </table>
+
+  <div class="modal">
+
+    <div class="popup">
+      <div class="popup-head">
+        <div class="close">X</div>
+      </div>
+      <div class="popup-main">
+
+        <form class="popup-form">
+          <label>
+            <span>First Name</span>
+            <input type="text" name="firstName">
+          </label>
+          <label>
+            <span>Last Name</span>
+            <input type="text" name="lastName">
+          </label>
+          <label>
+            <span>Age</span>
+            <input type="text" name="age">
+          </label>
+        </form>
+
+        <div class="popup-btn">
+          <div class="btn close">close</div>
+          <div class="btn ok">ok</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Кнопка -->
+  <div class="btn add-user">add user</div>
+
+  <!-- <script src="js/Lesson2_Homework_A.js"></script>
   <script src="js/Lesson2_Homework_B.js"></script>
   <script src="js/Lesson2_Homework_C.js"></script>
   <script src="js/Lesson3_Homework_ CaseInsensitiveSearch.js"></script>
   <script src="js/Lesson3_Homework_FamilyBudget.js"></script>
   <script src="js/Lesson3_Homework_FindingDataArr.js"></script>
   <script src="js/Lesson4_Homework_Polyndrom.js"></script>
-  <script src="js/Lesson4_Homework_RandomNumbers.js"></script>
+  <script src="js/Lesson4_Homework_RandomNumbers.js"></script> -->
   <script src="js/Lesson5_Homework_FunctionCalc.js"></script>
   <script src="js/Lesson5_Homework_FunctionConstructor.js"></script>
   <script src="js/Lesson5_Homework_Timer.js"></script>
-  <script src="js/Lesson7_Homework_ModalWindowIsClosed.js"></script>
-  <script src="js/Lesson7_Homework_ModalWindowIsOpen.js"></script>
-  <script src="js/Lesson8_Homework_AddUserInfoInTable.js"></script>
-  <script src="js/Lesson8_Homework_Extended.js"></script>
-  <script src="js/"></script>
+  <script src="js/Lesson6_Homework_Figure.js"></script>
+  <script src="js/Lesson7&8_Homework_Modal.js"></script>
 
 </body>
 
